force-app/main/default/objects/Doc_Type_Visibility__mdt/Doc_Type_Visibility__mdt.object-meta.xml
<CustomObject>
    <description>Controls which Document Type picklist options are visible to each profile in the F-UploadDocument Screen Flow. Queried at runtime by the flow to filter available document types.</description>
    <label>Document Type Visibility</label>
    <pluralLabel>Document Type Visibilities</pluralLabel>
</CustomObject>