force-app/main/default/objects/Doc_Type_Visibility__mdt/fields/Document_Type_Value__c.field-meta.xml
<CustomField>
    <fullName>Document_Type_Value__c</fullName>
    <description>The Document Type picklist value shown to the user.</description>
    <label>Document Type Value</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>