force-app/main/default/objects/Doc_Type_Visibility__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <description>Profile name that should see this document type option. Use ALL for options visible to all profiles.</description>
    <label>Profile Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>